--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         
         <!-- Cabeçalho com imagem de banner -->
         <header>
-            <div class="h-32 bg-cover bg-center" style="background-image: url('https://placehold.co/600x200/F8C8DC/4A2328?text=Elma+Doces')">
+            <div class="h-32 bg-cover bg-center" style="background-image: url('https://iili.io/KJsfN6v.png')">
                 <!-- Imagem de fundo dos doces -->
             </div>
             <div class="p-4 bg-white">
                 <div class="flex items-center space-x-4">
                     <!-- Logo da loja -->
-                    <img src="https://placehold.co/100x100/4A2328/FFFFFF?text=E" alt="Logo Elma Doces" class="w-16 h-16 rounded-full border-2 border-white -mt-10 shadow-md">
+                    <img src="https://iili.io/KJsFwDg.png" alt="Logo Elma Doces" class="w-16 h-16 rounded-full border-2 border-white -mt-10 shadow-md">
                     <div>
                         <h1 class="text-2xl font-bold text-gray-800">Elma Doces</h1>
                         <p class="text-sm text-pink-600 font-semibold cursor-pointer">Ver mais</p>
@@ -78,33 +78,33 @@
                 <!-- Grid de produtos -->
                 <div class="grid grid-cols-1 gap-6">
                     
-                    <!-- Produto 1: Bolo de Pote -->
-                    <div class="flex items-center space-x-4 bg-white rounded-lg overflow-hidden">
-                        <img src="https://placehold.co/150x150/F8D4E4/4A2328?text=Bolo+de+Pote" alt="Bolo de Pote" class="w-28 h-28 object-cover">
-                        <div class="py-2 pr-2">
-                            <h3 class="font-semibold text-gray-800">Bolo de Pote Sensação</h3>
-                            <p class="text-sm text-gray-500 mt-1">Bolo de chocolate molhadinho com recheio cremoso de morango.</p>
-                            <p class="font-bold text-lg text-green-600 mt-2">R$ 12,50</p>
+                    <!-- Produto 1: Tablete Recheado Pistache -->
+                    <div class="flex items-start space-x-4 bg-white rounded-lg overflow-hidden">
+                        <img src="https://static.ifood-static.com.br/image/upload/t_medium/pratos/1fc01f2a-c53e-4186-9b3b-be2c41527dcc/202508032331_C284_i.jpg" alt="Tablete Recheado Pistache" class="w-28 h-28 object-cover rounded-md">
+                        <div class="py-2 pr-2 flex-1">
+                            <h3 class="font-semibold text-gray-800">Tablete Recheado Pistache Emily In Paris 90G</h3>
+                            <p class="text-sm text-gray-500 mt-1">Delicioso tablete de chocolate com recheio cremoso de pistache.</p>
+                            <p class="font-bold text-lg text-green-600 mt-2">R$ 9,90</p>
                         </div>
                     </div>
 
-                    <!-- Produto 2: Brigadeiros Gourmet -->
-                    <div class="flex items-center space-x-4 bg-white rounded-lg overflow-hidden">
-                        <img src="https://placehold.co/150x150/EBC1D9/4A2328?text=Brigadeiros" alt="Brigadeiros Gourmet" class="w-28 h-28 object-cover">
-                        <div class="py-2 pr-2">
-                            <h3 class="font-semibold text-gray-800">Brigadeiros Gourmet</h3>
-                            <p class="text-sm text-gray-500 mt-1">Caixa com 4 unidades de brigadeiros nos sabores: tradicional, pistache, ninho e churros.</p>
-                            <p class="font-bold text-lg text-green-600 mt-2">R$ 16,00</p>
+                    <!-- Produto 2: Cesta Lanut -->
+                    <div class="flex items-start space-x-4 bg-white rounded-lg overflow-hidden">
+                        <img src="https://static.ifood-static.com.br/image/upload/t_medium/pratos/2c6f230b-9ea3-4160-a513-64cafdcf096b/202508111422_AQ84_i.jpg" alt="Cesta Lanut" class="w-28 h-28 object-cover rounded-md">
+                        <div class="py-2 pr-2 flex-1">
+                            <h3 class="font-semibold text-gray-800">Cesta Lanut</h3>
+                            <p class="text-sm text-gray-500 mt-1">1 Kit Acessório G, 1 Caixa Minishow Lanut 108g, 1 Tablete 100g Lanut Avelã, 1 Tablete 100g Lanut Avelã Branco, 1 Tablete 30g Bc Imunidade, 1 Chocowafer 80g Lanut, 1 Slack 315g Lanut, 3 Tabletes 20g Lanut Ao Leite, 2 Trufas 30g Lanut, 2 Trufas 30g Grancherie</p>
+                            <p class="font-bold text-lg text-green-600 mt-2">R$ 119,90</p>
                         </div>
                     </div>
 
-                    <!-- Produto 3: Pudim -->
-                    <div class="flex items-center space-x-4 bg-white rounded-lg overflow-hidden">
-                        <img src="https://placehold.co/150x150/F2B3C9/4A2328?text=Pudim" alt="Pudim de Leite" class="w-28 h-28 object-cover">
-                        <div class="py-2 pr-2">
-                            <h3 class="font-semibold text-gray-800">Pudim de Leite</h3>
-                            <p class="text-sm text-gray-500 mt-1">Fatia generosa do nosso pudim de leite condensado, super cremoso e com calda de caramelo.</p>
-                            <p class="font-bold text-lg text-green-600 mt-2">R$ 9,00</p>
+                    <!-- Produto 3: Carnauba Speculos -->
+                    <div class="flex items-start space-x-4 bg-white rounded-lg overflow-hidden">
+                        <img src="https://static.ifood-static.com.br/image/upload/t_medium/pratos/2c6f230b-9ea3-4160-a513-64cafdcf096b/202508061108_T578_i.jpg" alt="Carnauba Speculos" class="w-28 h-28 object-cover rounded-md">
+                        <div class="py-2 pr-2 flex-1">
+                            <h3 class="font-semibold text-gray-800">Carnauba Speculos</h3>
+                            <p class="text-sm text-gray-500 mt-1">1 Drageado Speculos 100g, 1 Biscoito Ao Leite 85g, 4 Tablete Lacreme Kids 18g, 1 Cx Miau Ao Leite 70g, 4 Trufas Tradicional 30g, Café Filtrado 100g</p>
+                            <p class="font-bold text-lg text-green-600 mt-2">R$ 89,90</p>
                         </div>
                     </div>
                 </div>
